--- a/index.html
+++ b/index.html
@@ -31,6 +31,6 @@
         <section class="side_buttons"></section>
       </section>
     </main>
-    <script src="./script.js"></script>
+    <script src="src/index.js"></script>
   </body>
 </html>
